mType/tests/testFiles/collections/error/stackEmptyPop.mt
// Stack empty pop error test

Stack<int> stack = new Stack<int>();

// This should cause a runtime error
stack.pop(); // Error: Cannot pop from empty stack